--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-responsive": "^8.1.0",
     "react-scripts": "3.4.3",
     "weather-icons": "git+https://github.com/erikflowers/weather-icons.git"
   },
