--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-responsive": "^8.1.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.3",
     "weather-icons": "git+https://github.com/erikflowers/weather-icons.git"
   },
   "scripts": {
@@ -36,7 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "webpack": "^4.44.2"
-  }
+  "devDependencies": {}
 }
