--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "animate.css": "^4.1.1",
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "css-element-queries": "git+https://github.com/marcj/css-element-queries.git",
     "react": "^16.13.1",
+    "react-animated-weather": "^4.0.1",
     "react-dom": "^16.13.1",
+    "react-live-clock": "^5.0.5",
     "react-responsive": "^8.1.0",
     "react-scripts": "^3.4.3",
     "weather-icons": "git+https://github.com/erikflowers/weather-icons.git"
