--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "css-element-queries": "git+https://github.com/marcj/css-element-queries.git",
     "react": "^16.13.1",
     "react-animated-weather": "^4.0.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-live-clock": "^5.0.5",
     "react-responsive": "^8.1.0",
